--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ spring.datasource.driverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521:orcl
 # \uB370\uC774\uD130\uBCA0\uC774\uC2A4 \uC5F0\uACB0 URL \uC124\uC815 (Oracle \uC0AC\uC6A9)
 
-spring.datasource.username=calendar2
+spring.datasource.username=calendar
 # \uB370\uC774\uD130\uBCA0\uC774\uC2A4 \uC811\uC18D \uC0AC\uC6A9\uC790\uBA85 \uC124\uC815
 spring.datasource.password=1234
 # \uB370\uC774\uD130\uBCA0\uC774\uC2A4 \uC811\uC18D \uBE44\uBC00\uBC88\uD638 \uC124\uC815
@@ -36,6 +36,8 @@ spring.thymeleaf.cache=false
 # \uC5B4\uD50C\uB9AC\uCF00\uC774\uC158\uC758 url \uC694\uCCAD\uACFC \uB9E4\uD551\uB418\uC5B4 \uC788\uB294 \uD578\uB4E4\uB7EC \uC815\uBCF4 display
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.web.servlet.mvc.method.annotation=TRACE
+logging.level.com.javalab.calendar=INFO
+
 
 # MyBatis \uB9E4\uD37C XML \uD30C\uC77C \uC704\uCE58 \uC124\uC815
 mybatis.mapper-locations=classpath:/mapper/*.xml
